--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "react-scripts start",
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +19,10 @@
     "chai": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "helmet": "^7.1.0",
     "mocha": "^10.7.0",
-    "nodemon": "^3.1.4"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
+    "react-scripts": "^5.0.1"
   }
 }
