--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.3",
     "chai": "^5.1.1",
-    "mocha": "^10.7.0"
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mocha": "^10.7.0",
+    "nodemon": "^3.1.4"
   }
 }
